--- a/userservice/pom.xml
+++ b/userservice/pom.xml
@@ -63,6 +63,17 @@
 			<artifactId>spring-security-core</artifactId>
 			<!-- <version>5.0.0.RELEASE</version> -->
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
